--- a/.env
+++ b/.env
@@ -75,6 +75,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-
+FIREBASE_PROJECT_ID=kaeresku
 FIREBASE_CREDENTIALS=storage/app/firebase/kaeresku-firebase.json
 FIREBASE_DATABASE_URL=https://kaeresku-default-rtdb.asia-southeast1.firebasedatabase.app/
