--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -1,33 +1,50 @@
-steps:
-  # 1️⃣ Build Docker image
-  - name: Deploy to Cloud run 
-    args:
-      [
-        'build',
-        '-t', 'asia-southeast2-docker.pkg.dev/forward-garden-421413/kaeresku/kaeresku:$SHORT_SHA',
-        '.'
-      ]
+name: Deploy to Cloud Run
 
-  # 2️⃣ Push Docker image ke Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args:
-      [
-        'push',
-        'asia-southeast2-docker.pkg.dev/forward-garden-421413/kaeresku/kaeresku:$SHORT_SHA'
-      ]
+env:
+  SERVICE_NAME: kaeresku
+  PROJECT_ID: forward-garden-421413
+  DOCKER_IMAGE_URL: asia-southeast2-docker.pkg.dev/forward-garden-421413/kaeresku/kaeresku:105
+  REGION: asia-southeast2
 
-  # 3️⃣ Deploy ke Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      [
-        'run', 'deploy', 'kaeresku',
-        '--image', 'asia-southeast2-docker.pkg.dev/forward-garden-421413/kaeresku/kaeresku:$SHORT_SHA',
-        '--region', 'asia-southeast2',
-        '--platform', 'managed',
-        '--allow-unauthenticated',
-        '--set-secrets', 'FIREBASE_CREDENTIALS=firebase-credentials:latest'
-      ]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-images:
-  - 'asia-southeast2-docker.pkg.dev/forward-garden-421413/kaeresku/kaeresku:$SHORT_SHA'
+jobs:
+  dockerize-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Google Cloud Auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker asia-southeast2-docker.pkg.dev
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{ env.DOCKER_IMAGE_URL }}:latest -f Dockerfile .
+          docker push ${{ env.DOCKER_IMAGE_URL }}:latest
+
+      - name: Deploy to Cloud Run
+        run: |
+          echo SERVICE_NAME $SERVICE_NAME
+          gcloud run deploy $SERVICE_NAME \
+            --image ${{ env.DOCKER_IMAGE_URL }}:latest \
+            --platform managed \
+            --region ${{ env.REGION }} \
+            --allow-unauthenticated
